# shock_chain

./: README.md  pyproject.toml  requirements.txt
configs/: default.yaml  shocks.yaml
notebooks/: 03_what_if_scenarios.ipynb
notebooks/.ipynb_checkpoints/: 03_what_if_scenarios-checkpoint.ipynb
outputs/eval/: evaluations.npz
outputs/eval_results/: monte_carlo_results.csv  risk_report.txt
outputs/logs/ppo_supply_chain_1/: events.out.tfevents.1777011087.SaYaNtAn.15514.0
outputs_curriculum/logs/P1_Calm_0/: events.out.tfevents.1777013870.SaYaNtAn.21347.0
outputs_curriculum/logs/P2_Stochastic_0/: events.out.tfevents.1777014035.SaYaNtAn.21347.1
outputs_curriculum/logs/P3_Crisis_0/: events.out.tfevents.1777014366.SaYaNtAn.21347.2
outputs_multi/eval/: round_evals.txt
outputs_multi/logs/ippo_factory_0/: events.out.tfevents.1777011948.SaYaNtAn.18038.2  (+4 more)
public/: app.js  index.html  style.css
scripts/: create_notebook.py  evaluate.py  evaluate_multi.py  train.py  train_curriculum.py  train_multi.py
src/: __init__.py
src/agents/: __init__.py  heuristic_baselines.py  multi_agent.py  single_agent.py
src/api/: server.py
src/environment/: __init__.py  des_engine.py  multi_agent_env.py  shock_injector.py  supply_chain_env.py
src/rewards/: __init__.py  composite_reward.py
src/scenarios/: __init__.py  monte_carlo.py
src/utils/: __init__.py  config_loader.py  visualization.py
supply_chain_shock_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_env.py  test_multi_agent.py  test_reward.py  test_shocks.py
(+10 files in other folders)
